<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">GiftIdea!</string>
  <string name="action_add">new idea</string>
  <string name="new_idea_hint">Hummingbird feeder #ginger</string>
  <string name="adding">Adding</string>
  <string name="zero">0</string>
  <string name="gift_ideas">gift ideas</string>
  <string name="gift_idea">gift idea</string>
  <string name="action_create">create</string>
  <string name="no_hash_tags_message">Must have at least 1 hashtag</string>
  <string name="no_idea_message">Must have an idea!</string>
  <string name="action_update">update</string>
  <string name="no_recipients_message">This is where gift recipients will show up.\n\n\nNo ideas yet! Add one now :)</string>
  <string name="action_delete">Delete</string>
  <string name="gift_recipients_title">GiftIdea! Recipients</string>
  <string name="new_idea_title">New GiftIdea!</string>
  <string name="edit_idea_title">Edit GiftIdea!</string>
  <string name="action_about">About</string>
  <string name="about_title">About GiftIdea!</string>
  <string name="twitter"><a href="https://twitter.com/sghill">@sghill</a></string>
  <string name="twitter_label">Twitter</string>
  <string name="got_it">GOT IT</string>
  <string name="cancel">Cancel</string>
  <string name="delete">Delete</string>
  <string name="finished_idea_deleted_message">Deleted</string>
  <string name="confirmation">Confirm</string>
  <string name="got_it_message">Got that idea!</string>
  <string name="ideas_label">ideas</string>
  <string name="idea_label">idea</string>
  <string name="edit_idea_hint">Hummingbird feeder</string>
  <string name="bsd_license">BSD 3-Clause</string>
  <string name="license_label">License</string>
  <string name="code">github.com/sgrailways/giftidea</string>
  <string name="code_label">Code</string>
  <string name="days">days</string>
  <string name="day">day</string>
  <string name="in">in</string>
  <string name="countdown_configuration_leader_label">Count down to</string>
  <string name="question_mark">\?</string>
  <string name="stop_countdown">Stop</string>
  <string name="keep_countdown">Continue</string>
  <string name="stop_countdown_message">Countdown Stopped</string>
  <string name="today_label">today :)</string>
  <string name="upcoming">Upcoming Event</string>

</resources>
