<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="#fff"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="10dp">

  <TextView
      android:id="@+id/event_name"
      android:textSize="24sp"
      android:text="Memorial Day!"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:orientation="horizontal">

    <TextView
        android:id="@+id/countdown_leader_label"
        android:text="@string/in"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/days_remaining"
        android:text="8"
        android:textSize="32sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/plural_countdown_label"
        android:text="@string/days"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/singular_countdown_label"
        android:text="@string/day"
        android:visibility="gone"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
  </LinearLayout>

  <LinearLayout
      style="?android:attr/buttonBarStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/no_celebration"
        android:text="@string/no_celebration"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
  </LinearLayout>
</LinearLayout>